# graphics2d

./: .gitignore  Cargo.toml  README.md  build.rs
src/: camera.rs  chatbox.rs  client.rs  depend.rs  lib.rs  mat.rs  rrs.rs  simple.rs  square.rs  square_shader.wgsl  text.rs  texture.rs  texture_shader.wgsl  textured.rs  util.rs  win.rs  window.rs
src/graphics/: grid.rs  mod.rs  text.rs  textured.rs
src/old/: chatbox.rs  text.rs  window.rs
src/util/: indirect_handles.rs  mod.rs
