[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.18"
winit = { version = "0.29.8", features = [ "rwh_05" ] }
env_logger = "0.10.1"
log = "0.4.20"
bytemuck = { version = "1.14.0", features = [ "derive" ] }
pollster = "0.3.0"
anyhow = "1.0.77"
cgmath = { version = "0.18.0", features = [ "serde" ] }
instant = "0.1.12"
fontdue = "0.8.0"
itertools = "0.12.0"
clipboard = "0.5.0"
serde = { version = "1.0.193", features = [ "derive" ] }
bincode = "1.3.3"
serde_json = "1.0.108"
include_dir = "0.7.3"
strum = "0.25.0"
strum_macros = "0.25.3"

# webassembly dependency
cfg-if = "1.0.0"

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
client = []
server = []

# webassembly dependency
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false

# [[client]]
# name = "client"
# required-features = ["client"]
# 
# [[server]]
# name = "server"
# required-features = ["server"]

