[package]
name = "graphics2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.23.0", features = [ "must_cast", "derive" ] }
nalgebra = "0.33.2"
pollster = "0.4.0"
strum = { version = "0.27.1", features = [ "strum_macros", "derive"] }
wgpu = "25.0.0"
winit = { version = "0.30.10", features = [ "rwh_06" ] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
client = []
server = []

